--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include('./components/head') %>
+
 <body>
-    
 
 
+  <!-- component -->
 
-<h1>hooooooooooo</h1>
 
+  <header>
+    <%- include('./components/navbar') %>
+  </header>
+
+  <h1>Blog Posts</h1>
+    <ul>
+        <% data.forEach((post) => { %>
+            <li><%= post.title %></li>
+        <% }); %>
+    </ul>
+
+
+<footer>
+    <%- include('./components/footer') %>
+</footer>
 
 </body>
+
 </html>
